// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CatalogItem correctly with itemsCount set to 10 1`] = `
<div
  className="col-md-4 pl-0 mb-4"
>
  <div
    className="catalog-item"
  >
    <div
      className="catalog-item__body d-flex flex-column align-items-center disabled"
    >
      <h3
        className="catalog-icon catalog-icon--dataset"
      >
        Datasettkatalog
      </h3>
      <span
        className="fdk-text-size-small fdk-color-neutral-dark"
      >
        10
         
        datasettbeskrivelser
      </span>
    </div>
  </div>
</div>
`;

exports[`should render CatalogItem correctly with missing itemsCount 1`] = `
<div
  className="col-md-4 pl-0 mb-4"
>
  <div
    className="catalog-item"
  >
    <div
      className="catalog-item__body d-flex flex-column align-items-center disabled h-100"
    >
      <h3
        className="catalog-icon catalog-icon--dataset"
      >
        Datasettkatalog
      </h3>
      <span
        className="fdk-text-size-small fdk-color-neutral-dark"
      >
        Ingen
         
        datasettbeskrivelser
      </span>
    </div>
  </div>
</div>
`;
